# Software

No10_task2/devel/: .catkin
No10_task2/devel/lib/pkgconfig/: task2.pc
No10_task2/devel/lib/task2/: task2
No10_task2/devel/share/task2/cmake/: task2Config.cmake
No10_task2/src/task2/: CMakeLists.txt
No10_task2/src/task2/src/: task2.cpp  task2_pro.cpp
task1/devel/: .catkin  local_setup.sh  setup.sh
task1/src/task1/: CMakeLists.txt  package.xml  task1_1  task1_2  task1_3  task1_4
task1/src/task1/src/: exp1.cpp  exp2.cpp  exp3.cpp  exp4.cpp
task3/devel/: .catkin  .rosinstall  local_setup.sh
task3/devel/lib/exp3/: task1_2  task3
task3/devel/lib/pkgconfig/: exp3.pc  rviz_vis.pc  scout_base.pc  scout_bringup.pc  scout_description.pc  scout_msgs.pc  ugv_sdk.pc
task3/devel/lib/rviz_vis/: rviz_vis
task3/devel/lib/scout_base/: scout_base_node
task3/devel/lib/ugv_sdk/: demo_bunker_robot  demo_hunter_robot  demo_protocol_detector  demo_ranger_robot  demo_robot_version  demo_scout_mini_omni_robot  demo_scout_robot  demo_tracer_robot
task3/devel/share/exp3/cmake/: exp3Config.cmake
task3/devel/share/rviz_vis/cmake/: rviz_visConfig.cmake
task3/devel/share/scout_base/cmake/: scout_baseConfig.cmake
task3/devel/share/scout_bringup/cmake/: scout_bringupConfig.cmake
task3/devel/share/scout_description/cmake/: scout_descriptionConfig.cmake
task3/src/exp3/: CMakeLists.txt
task3/src/exp3/src/: exp3_node.cpp  task1_2.cpp  task3.cpp
task3/src/rviz_vis/: CMakeLists.txt
task3/src/rviz_vis/src/: points_and_lines.cpp
(+4 files in other folders)
